stylesheets/screen.css
/* ... */
#see_more_oss:hover {
  background: transparent url(/images/see-more-oss.png) 0 -39px no-repeat;
}

#services-consulting {
  background: transparent url(/images/services-consulting.png) right center no-repeat;
}

#services-kick-start {
  background: transparent url(/images/services-kick-start.png) right center no-repeat;
}

#services-training {
  background: transparent url(/images/services-training.png) right center no-repeat;
}

#services-hoptoad {
  background: transparent url(/images/services-hoptoad.png) right center no-repeat;
  margin-bottom: 36px;
}
#main-content-bottom {
  width: 100%;
  height: 20px;
  position: absolute;
  bottom: 0;
  left: 0;
  background: url(/images/main-content-bottom.png) 0px 0px repeat-x;
}

#footer {
  background: #0b0909 url(/images/footer.png) 0px 0px repeat-x;
  padding: 25px 0 130px 0;
  *padding-bottom: 100px;
  position: relative;
}

#footer-wrapper {
  width: 880px;
  position: absolute;
}

#footer-left {
  float: left;
}

#footer-left ul li {
  float: left;
  display: inline;
  list-style-type: none;
  margin: 0 5px 0 0;
}

#footer-left a {
  float: left;
  text-decoration: none;
  font-size: 12px;
  color: #aaa;
  font-weight: bold;
}

#footer-left a:hover {
  text-decoration: underline;
}

#footer-logo {
  float: right;
}

/*#################
Community Page
#################*/

body#community .dark-content {
  margin-bottom: 20px;
}

.project-details {
  float: left;
  height: 150px;
  width: 280px;
  position: relative;
}

a.source-btn {
  position: absolute;
  top: -10px;
  right: -3px;
  background: url(/images/source.png) 0px 0px no-repeat;
  width: 89px;
  height: 37px;
  text-indent: -9999px;
}

a.source-btn:hover {
  background: url(/images/source.png) 0px -37px no-repeat;
}

.project-thumbnail {
  width: 79px;
  height: 79px;
  margin-right: 20px;
  float: left;
}

.project-thumbnail.paperclip {
  background: url(/images/oss-logos/paperclip.png) 0px 0px no-repeat;
}

.project-thumbnail.shoulda {
  background: url(/images/oss-logos/shoulda.png) 0px 0px no-repeat;
}

.project-thumbnail.factory-girl {
  background: url(/images/oss-logos/factory-girl.png) 0px 0px no-repeat;
}

.project-thumbnail.high-voltage {
  background: url(/images/oss-logos/high-voltage.png) 0px 0px no-repeat;
}

.project-thumbnail.clearance {
  background: url(/images/oss-logos/clearance.png) 0px 0px no-repeat;
}

.project-thumbnail.jester {
  background: url(/images/oss-logos/jester.png) 0px 0px no-repeat;
}

.project-thumbnail.pace-car {
  background: url(/images/oss-logos/pace-car.png) 0px 0px no-repeat;
}

.project-thumbnail.suspenders {
  background: url(/images/oss-logos/suspenders.png) 0px 0px no-repeat;
}

.project-thumbnail.flutie {
  background: url(/images/oss-logos/flutie.png) 0px 0px no-repeat;
}

.hackfest,
#ipad-showcase {
  padding: 20px 0;
}

#ipad-showcase {
  text-align: center;
}

body#community #ipad-showcase h4 {
  padding-bottom: 5px;
}

body#community #ipad-showcase h3 a {
  color: #D5CEC8;
  text-transform: uppercase;
  font-size: 22px;
  text-decoration: none;
}

body#community #ipad-showcase h2 a {
  font-size: 14px;
  font-weight: normal;
  padding-bottom: 10px;
}

#ipad-showcase a {
  display: block;
}

.hackfest img {
  float: left;
  margin-left: 40px;
}

.hackfest-address {
  float: left;
  margin-bottom: 8px;
  width: 350px;
}

.hackfest-info {
  float: left;
  margin-left: 10px;
  width: 426px;
}

/********************************
+ Products Page
********************************/

.dark-content h3 {
  color: #fff;
  font-size: 1.8em;
}

.dark-content p {color: #cacaca;}

.dark-content-right {
  width: 240px;
  padding-right: 45px;
  float: right;
}

.dark-content-left {
  float: left;
  width: 530px;
}

.dark-content-left ul {margin: 0;}
.dark-content-right p {line-height: 1.4;}
.image-switcher, .homepage-carousel .jcarousel-item, .homepage-carousel ul li img {
  width: auto;
  padding: 15px;
  background: transparent url(/images/image-switcher.png) top left repeat-x;
  border-bottom: 1px solid #000;
  text-align: center;
}

.slide-frame{
  background: transparent url(/images/image-switcher.png) top left repeat-x;
  border-bottom: 1px solid #000;
  width: 500px;
  height: 372px;
  padding: 15px;
}

.homepage-carousel .jcarousel-item {
  width: 500px;
  height: 332px;
}

.project-carousel > li.jcarousel-item {
  display: block;
  width: 830px;
  height: 405px;
}

.jcarousel-clip-vertical {
  height: 405px;
}

.image-switcher-tools {
  padding: 15px 0;
}

.image-switcher-tools span {
  font-weight: bold;
  float: left;
  color: #656565;
}

.image-switcher-tools a {
  display: block;
  float: left;
  height: 26px;
  width: 24px;
  background: transparent url(/images/image-swticher-control.png) 0 -26px;
  overflow: hidden;
  text-indent: -5000px;
  margin: 0 6px 0 0px;
}

.image-switcher-tools a:hover {
    background: transparent url(/images/image-swticher-control.png) 0 -52px;
}

.image-switcher-tools a.activeSlide {
  background: transparent url(/images/image-swticher-control.png) 0 0px;
}

.project-nav {
  height: 455px;
  width: 41px;
  position: absolute;
  background: transparent url(/images/project-nav.png) 0 0 no-repeat;
  top: 1px;
  right: 1px;
  z-index: 99;
  padding: 8px 0 0 13px;
}

.project-nav a {
  display: block;
  width: 32px;
  height: 26px;
  text-align: center;
  font-weight: bold;
  font-size: 1.1em;
  background: transparent url(/images/project-nav-button.png) 0 0 no-repeat;
  margin: 0 0 5px 0;
  color: #232323;
  text-decoration: none;
  padding: 8px 0 0 0;
}

.project-nav a:hover {
 background: transparent url(/images/project-nav-button.png) -64px 0 no-repeat;
}

.project-nav a.active {
  background: transparent url(/images/project-nav-button.png) -32px 0 no-repeat;
  color: #d4d4d4;
  text-shadow: 0px -1px #000;
}

/******************************
+ About Us
******************************/

#three_columns {
  border-top: 1px solid #3d3832;
  padding: 20px 0 10px 0;
  color: #E6E0D9;
}
/* ... */

